# fillcan

./: .clang-format  .gitignore  CMakeLists.txt  README.md  documentation-bak.html  documentation.html  examples.html  index.html  main.cpp  package.json  svelte.config.js
_app/: version.json
_app/immutable/: manifest.json  start-310397b1.js  start-32ec00b5.js  start-a6fa3781.js
_app/immutable/chunks/: HamburgerMenuIcon-525600aa.js  index-974b575e.js
_app/immutable/pages/: documentation.svelte-d505f0d5.js  index.svelte-14cf1d5c.js  index.svelte-779064a5.js
apps/compute_pipeline/: app.cpp  app.hpp
apps/compute_pipeline_test/: app.cpp  app.hpp
apps/default/: app.cpp  app.hpp
apps/graphics_pipeline_test/: app.cpp  app.hpp
apps/graphics_pipeline_test_2/: app.cpp  app.hpp
apps/simple_camera/: app.cpp  app.hpp
apps/simple_camera/shaders/: simple.frag  (+1 more)
apps/simple_cube/: app.cpp  app.hpp
apps/simple_model/: app.cpp  app.hpp
apps/simple_texture/: app.cpp  app.hpp
apps/simple_triangle/: app.cpp  app.hpp
fillcan/: CMakeLists.txt
fillcan/_app/: version.json
fillcan/_app/immutable/: error.svelte-30307c4e.js  error.svelte-33fc692c.js  error.svelte-3b933eeb.js  manifest.json  start-07a5678a.js  start-1f2fac4e.js  start-2ef234fa.js  start-e80b72af.js
fillcan/_app/immutable/assets/: HamburgerMenuIcon-6f9621c1.css  HamburgerMenuIcon-8f4e6a83.css  nord-cc0cdcf9.css
fillcan/_app/immutable/assets/pages/: __layout.svelte-bf42629b.css  documentation.svelte-08605e23.css  documentation.svelte-bc24f1d5.css  index.svelte-a5f1ef33.css
fillcan/_app/immutable/chunks/: HamburgerMenuIcon-343be493.js  HamburgerMenuIcon-5c28a1e6.js  HamburgerMenuIcon-d70e24a9.js  StateStore-20b0ac83.js  StateStore-3027a606.js  StateStore-aaa97d2e.js  index-3b5f2b57.js  index-4112df05.js  index-5cee6edc.js  nord-5eb09d97.js  paths-b7da7162.js  paths-fbc4d9fe.js
fillcan/_app/immutable/pages/: __layout.svelte-34013e55.js  __layout.svelte-804fb1f3.js  __layout.svelte-9a21708f.js  __layout.svelte-ef6a7213.js  documentation-bak.svelte-4dea7418.js  documentation.svelte-04c58863.js  documentation.svelte-8b47ff78.js  documentation.svelte-8ba91083.js  examples.svelte-48af5a78.js  examples.svelte-7bb883dc.js  examples.svelte-b6dadc57.js  index.svelte-d761a574.js  index.svelte-da283648.js  index.svelte-fa4aef74.js
fillcan/include/fillcan/: device_pool.cpp  device_pool.hpp  fillcan.cpp  fillcan.hpp  fillcan_graphics.cpp  fillcan_graphics.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  queue.cpp  queue.hpp  window.cpp  window.hpp
fillcan/include/fillcan/commands/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  command_recording.cpp  command_recording.hpp  queue.cpp  queue.hpp
fillcan/include/fillcan/computing/: compute_pipeline.cpp  compute_pipeline.hpp  compute_pipeline_builder.cpp  compute_pipeline_builder.hpp
fillcan/include/fillcan/drawing/: framebuffer.cpp  graphics_pipeline.hpp  render_pass.cpp  render_pass.hpp  render_pass_builder.cpp  render_pass_builder.hpp
fillcan/include/fillcan/graphics/: asset_manager.cpp  asset_manager.hpp  camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  game_object.cpp  game_object.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  graphics_pipeline_builder.cpp  graphics_pipeline_builder.hpp  model.cpp  model.hpp  render_pass.cpp  render_pass.hpp  render_pass_builder.cpp  render_pass_builder.hpp  sampler.cpp  sampler.hpp  sampler_builder.cpp  sampler_builder.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp
fillcan/include/fillcan/graphics_pipeline/: framebuffer.cpp  framebuffer.hpp  render_pass.cpp  render_pass.hpp  render_pass_builder.cpp  render_pass_builder.hpp
fillcan/include/fillcan/instance/: device_pool.cpp  device_pool.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp
fillcan/include/fillcan/memory/: buffer.cpp  buffer.hpp  buffer_builder.cpp  buffer_builder.hpp  buffer_director.cpp  buffer_director.hpp  buffer_view.cpp  buffer_view.hpp  fence.cpp  fence.hpp  image.cpp  image.hpp  image_builder.cpp  image_builder.hpp  image_director.cpp  image_director.hpp  image_view.cpp  image_view.hpp  memory.cpp  memory.hpp  semaphore.cpp  semaphore.hpp
fillcan/include/fillcan/shader/: descriptor_pool.cpp  descriptor_pool.hpp  descriptor_pool_builder.cpp  descriptor_pool_builder.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_set_layout_builder.cpp  descriptor_set_layout_builder.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_layout.cpp  pipeline_layout.hpp  shader_module.cpp  shader_module.hpp
fillcan/include/fillcan/swapchain/: swapchain.cpp  swapchain.hpp
fillcan/include/uuid/: uuid.h
fillcan/lib/glfw/include/GLFW/: glfw3.h
fillcan/lib/shaderc/lib/: shaderc.lib
scripts/: configure_debug.bat  configure_debug.ps1  configure_release.bat  configure_release.ps1
src/: app.html  globalstyles.scss
src/objects/: State.ts
src/routes/: __layout.svelte  documentation-bak.svelte  documentation.svelte  index.svelte
src/stores/: StateStore.ts
(+370 files in other folders)
